[package]
name = "solguard-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solguard-api"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
rusqlite        = { version = "0.31", features = ["bundled"] }
sha2            = "0.10"
hex             = "0.4"
chrono          = { version = "0.4", features = ["serde"] }
