[package]
name = "solguard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solguard"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
